[package]
name = "paillier"
version = "0.2.1-alpha.0"





[dependencies]
num-traits = "0.1"
rand = "0.5"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
rust-gmp = { version="0.5", optional=true }
# ring = { version="0.13", optional=true }

bit-vec = "0.5"

# [dependencies.curv]
# git = "https://github.com/KZen-networks/curv"
# branch = "known_issues"
curv = { version = "0.1.0", features = ["ec_secp256k1"], git = "https://github.com/vhnatyk/curv", branch="vhnat/mpecdsa_core_extraction" }

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false
